# demo-python-di-with-autoconfiguration

./: README.md  pyproject.toml
config/: config.yaml
src/demo/: kernel.py
src/demo/commands/: say_bye_command.py  say_hello_command.py
src/demo/controllers/: hello.py
src/demo/dependency_injection/: containers.py  dispatcher.py  service.py
src/demo/services/: hello.py  router.py
